# custom_ethernet_w5500

./: CMakeLists.txt
w5500_spi/: CMakeLists.txt  w5500_spi.c
